libs/sdk-flutter/ios/Classes/frb_generated.h

typedef struct wire_cst_list_prim_u_8_strict {
  uint8_t *ptr;
  int32_t len;
} wire_cst_list_prim_u_8_strict;
typedef struct wire_cst_opening_fee_params {
  uint64_t min_msat;
  uint32_t proportional;
  struct wire_cst_list_prim_u_8_strict *valid_until;
  uint32_t max_idle_time;
  uint32_t max_client_to_self_delay;
  struct wire_cst_list_prim_u_8_strict *promise;
} wire_cst_opening_fee_params;
typedef union NodeConfigKind {
  struct wire_cst_NodeConfig_Greenlight Greenlight;
} NodeConfigKind;
typedef struct wire_cst_node_config {
  int32_t tag;
  union NodeConfigKind kind;
} wire_cst_node_config;
typedef struct wire_cst_ln_url_pay_request_data {
  struct wire_cst_list_prim_u_8_strict *callback;
  uint64_t min_sendable;
  uint64_t max_sendable;
  struct wire_cst_list_prim_u_8_strict *metadata_str;
  uint16_t comment_allowed;
  struct wire_cst_list_prim_u_8_strict *domain;
  bool allows_nostr;
  struct wire_cst_list_prim_u_8_strict *nostr_pubkey;
  struct wire_cst_list_prim_u_8_strict *ln_address;
} wire_cst_ln_url_pay_request_data;
typedef struct wire_cst_ln_url_pay_request {
  struct wire_cst_ln_url_pay_request_data data;
  uint64_t amount_msat;
  struct wire_cst_list_prim_u_8_strict *comment;
  struct wire_cst_list_prim_u_8_strict *payment_label;
} wire_cst_ln_url_pay_request;
typedef struct wire_cst_ln_url_withdraw_request_data {
  struct wire_cst_list_prim_u_8_strict *callback;
  struct wire_cst_list_prim_u_8_strict *k1;
  struct wire_cst_list_prim_u_8_strict *default_description;
  uint64_t min_withdrawable;
  uint64_t max_withdrawable;
} wire_cst_ln_url_withdraw_request_data;
typedef struct wire_cst_ln_url_withdraw_request {
  struct wire_cst_ln_url_withdraw_request_data data;
  uint64_t amount_msat;
  struct wire_cst_list_prim_u_8_strict *description;
} wire_cst_ln_url_withdraw_request;
typedef struct wire_cst_open_channel_fee_request {
  uint64_t *amount_msat;
  uint32_t *expiry;
} wire_cst_open_channel_fee_request;
typedef struct wire_cst_prepare_onchain_payment_response {
  struct wire_cst_list_prim_u_8_strict *fees_hash;
  double fees_percentage;
  uint64_t fees_lockup;
  uint64_t fees_claim;
  uint64_t sender_amount_sat;
  uint64_t recipient_amount_sat;
  uint64_t total_fees;
} wire_cst_prepare_onchain_payment_response;
typedef struct wire_cst_pay_onchain_request {
  struct wire_cst_list_prim_u_8_strict *recipient_address;
  struct wire_cst_prepare_onchain_payment_response prepare_res;
} wire_cst_pay_onchain_request;
typedef struct wire_cst_prepare_onchain_payment_request {
  uint64_t amount_sat;
  int32_t amount_type;
  uint32_t claim_tx_feerate;
} wire_cst_prepare_onchain_payment_request;
typedef struct wire_cst_prepare_redeem_onchain_funds_request {
  struct wire_cst_list_prim_u_8_strict *to_address;
  uint32_t sat_per_vbyte;
} wire_cst_prepare_redeem_onchain_funds_request;
typedef struct wire_cst_prepare_refund_request {
  struct wire_cst_list_prim_u_8_strict *swap_address;
  struct wire_cst_list_prim_u_8_strict *to_address;
  uint32_t sat_per_vbyte;
} wire_cst_prepare_refund_request;
typedef struct wire_cst_message_success_action_data {
  struct wire_cst_list_prim_u_8_strict *message;
} wire_cst_message_success_action_data;
typedef struct wire_cst_success_action_processed {
  int32_t tag;
  union SuccessActionProcessedKind kind;
} wire_cst_success_action_processed;
typedef struct wire_cst_payment_details {
  int32_t tag;
  union PaymentDetailsKind kind;
} wire_cst_payment_details;
typedef struct wire_cst_payment {
  struct wire_cst_list_prim_u_8_strict *id;
  int32_t payment_type;
  int64_t payment_time;
  uint64_t amount_msat;
  uint64_t fee_msat;
  int32_t status;
  struct wire_cst_list_prim_u_8_strict *error;
  struct wire_cst_list_prim_u_8_strict *description;
  struct wire_cst_payment_details details;
  struct wire_cst_list_prim_u_8_strict *metadata;
} wire_cst_payment;
typedef struct wire_cst_ln_invoice {
  struct wire_cst_list_prim_u_8_strict *bolt11;
  int32_t network;
  struct wire_cst_list_prim_u_8_strict *payee_pubkey;
  struct wire_cst_list_prim_u_8_strict *payment_hash;
  struct wire_cst_list_prim_u_8_strict *description;
  struct wire_cst_list_prim_u_8_strict *description_hash;
  uint64_t *amount_msat;
  uint64_t timestamp;
  uint64_t expiry;
  struct wire_cst_list_route_hint *routing_hints;
  struct wire_cst_list_prim_u_8_strict *payment_secret;
  uint64_t min_final_cltv_expiry_delta;
} wire_cst_ln_invoice;
typedef struct wire_cst_ln_url_pay_error_data {
  struct wire_cst_list_prim_u_8_strict *payment_hash;
  struct wire_cst_list_prim_u_8_strict *reason;
} wire_cst_ln_url_pay_error_data;
typedef struct wire_cst_ln_url_pay_success_data {
  struct wire_cst_payment payment;
  struct wire_cst_success_action_processed *success_action;
} wire_cst_ln_url_pay_success_data;
typedef struct wire_cst_ln_url_withdraw_success_data {
  struct wire_cst_ln_invoice invoice;
} wire_cst_ln_url_withdraw_success_data;
typedef struct wire_cst_opening_fee_params_menu {
  struct wire_cst_list_opening_fee_params *values;
} wire_cst_opening_fee_params_menu;
typedef struct wire_cst_lsp_information {
  struct wire_cst_list_prim_u_8_strict *id;
  struct wire_cst_list_prim_u_8_strict *name;
  struct wire_cst_list_prim_u_8_strict *widget_url;
  struct wire_cst_list_prim_u_8_strict *pubkey;
  struct wire_cst_list_prim_u_8_strict *host;
  int64_t base_fee_msat;
  double fee_rate;
  uint32_t time_lock_delta;
  int64_t min_htlc_msat;
  struct wire_cst_list_prim_u_8_strict *lsp_pubkey;
  struct wire_cst_opening_fee_params_menu opening_fee_params_list;
} wire_cst_lsp_information;
typedef union NodeCredentialsKind {
  struct wire_cst_NodeCredentials_Greenlight Greenlight;
} NodeCredentialsKind;
typedef struct wire_cst_node_credentials {
  int32_t tag;
  union NodeCredentialsKind kind;
} wire_cst_node_credentials;
typedef struct wire_cst_payment_failed_data {
  struct wire_cst_list_prim_u_8_strict *error;
  struct wire_cst_list_prim_u_8_strict *node_id;
  struct wire_cst_ln_invoice *invoice;
} wire_cst_payment_failed_data;
struct wire_cst_ln_url_pay_error_data *frbgen_breez_sdk_cst_new_box_autoadd_ln_url_pay_error_data(void);
struct wire_cst_ln_url_pay_request *frbgen_breez_sdk_cst_new_box_autoadd_ln_url_pay_request(void);
struct wire_cst_ln_url_pay_request_data *frbgen_breez_sdk_cst_new_box_autoadd_ln_url_pay_request_data(void);
struct wire_cst_ln_url_pay_success_data *frbgen_breez_sdk_cst_new_box_autoadd_ln_url_pay_success_data(void);
struct wire_cst_ln_url_withdraw_request *frbgen_breez_sdk_cst_new_box_autoadd_ln_url_withdraw_request(void);
struct wire_cst_ln_url_withdraw_request_data *frbgen_breez_sdk_cst_new_box_autoadd_ln_url_withdraw_request_data(void);
struct wire_cst_ln_url_withdraw_success_data *frbgen_breez_sdk_cst_new_box_autoadd_ln_url_withdraw_success_data(void);
struct wire_cst_lsp_information *frbgen_breez_sdk_cst_new_box_autoadd_lsp_information(void);
struct wire_cst_message_success_action_data *frbgen_breez_sdk_cst_new_box_autoadd_message_success_action_data(void);
struct wire_cst_node_config *frbgen_breez_sdk_cst_new_box_autoadd_node_config(void);
struct wire_cst_node_credentials *frbgen_breez_sdk_cst_new_box_autoadd_node_credentials(void);
struct wire_cst_open_channel_fee_request *frbgen_breez_sdk_cst_new_box_autoadd_open_channel_fee_request(void);
struct wire_cst_opening_fee_params *frbgen_breez_sdk_cst_new_box_autoadd_opening_fee_params(void);
struct wire_cst_pay_onchain_request *frbgen_breez_sdk_cst_new_box_autoadd_pay_onchain_request(void);
struct wire_cst_payment *frbgen_breez_sdk_cst_new_box_autoadd_payment(void);
struct wire_cst_payment_failed_data *frbgen_breez_sdk_cst_new_box_autoadd_payment_failed_data(void);
struct wire_cst_prepare_onchain_payment_request *frbgen_breez_sdk_cst_new_box_autoadd_prepare_onchain_payment_request(void);
struct wire_cst_prepare_redeem_onchain_funds_request *frbgen_breez_sdk_cst_new_box_autoadd_prepare_redeem_onchain_funds_request(void);
struct wire_cst_prepare_refund_request *frbgen_breez_sdk_cst_new_box_autoadd_prepare_refund_request(void);