libs/sdk-flutter/lib/breez_sdk_core_bindings_generated.dart


  late final _frbgen_breez_sdk_cst_new_box_autoadd_ln_url_pay_error_dataPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_ln_url_pay_error_data> Function()>>(
          'frbgen_breez_sdk_cst_new_box_autoadd_ln_url_pay_error_data');
  late final _frbgen_breez_sdk_cst_new_box_autoadd_ln_url_pay_error_data =
      _frbgen_breez_sdk_cst_new_box_autoadd_ln_url_pay_error_dataPtr
          .asFunction<ffi.Pointer<wire_cst_ln_url_pay_error_data> Function()>();

  ffi.Pointer<wire_cst_ln_url_pay_request> frbgen_breez_sdk_cst_new_box_autoadd_ln_url_pay_request() {
    return _frbgen_breez_sdk_cst_new_box_autoadd_ln_url_pay_request();
  }

  late final _frbgen_breez_sdk_cst_new_box_autoadd_ln_url_pay_requestPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_ln_url_pay_request> Function()>>(
          'frbgen_breez_sdk_cst_new_box_autoadd_ln_url_pay_request');
  late final _frbgen_breez_sdk_cst_new_box_autoadd_ln_url_pay_request =
      _frbgen_breez_sdk_cst_new_box_autoadd_ln_url_pay_requestPtr
          .asFunction<ffi.Pointer<wire_cst_ln_url_pay_request> Function()>();

  ffi.Pointer<wire_cst_ln_url_pay_request_data>
      frbgen_breez_sdk_cst_new_box_autoadd_ln_url_pay_request_data() {
    return _frbgen_breez_sdk_cst_new_box_autoadd_ln_url_pay_request_data();
  }

  late final _frbgen_breez_sdk_cst_new_box_autoadd_ln_url_pay_request_dataPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_ln_url_pay_request_data> Function()>>(
          'frbgen_breez_sdk_cst_new_box_autoadd_ln_url_pay_request_data');
  late final _frbgen_breez_sdk_cst_new_box_autoadd_ln_url_pay_request_data =
      _frbgen_breez_sdk_cst_new_box_autoadd_ln_url_pay_request_dataPtr
          .asFunction<ffi.Pointer<wire_cst_ln_url_pay_request_data> Function()>();

  ffi.Pointer<wire_cst_ln_url_pay_success_data>
      frbgen_breez_sdk_cst_new_box_autoadd_ln_url_pay_success_data() {
    return _frbgen_breez_sdk_cst_new_box_autoadd_ln_url_pay_success_data();
  }

  late final _frbgen_breez_sdk_cst_new_box_autoadd_ln_url_pay_success_dataPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_ln_url_pay_success_data> Function()>>(
          'frbgen_breez_sdk_cst_new_box_autoadd_ln_url_pay_success_data');
  late final _frbgen_breez_sdk_cst_new_box_autoadd_ln_url_pay_success_data =
      _frbgen_breez_sdk_cst_new_box_autoadd_ln_url_pay_success_dataPtr
          .asFunction<ffi.Pointer<wire_cst_ln_url_pay_success_data> Function()>();

  ffi.Pointer<wire_cst_ln_url_withdraw_request>
      frbgen_breez_sdk_cst_new_box_autoadd_ln_url_withdraw_request() {
    return _frbgen_breez_sdk_cst_new_box_autoadd_ln_url_withdraw_request();
  }

  late final _frbgen_breez_sdk_cst_new_box_autoadd_ln_url_withdraw_requestPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_ln_url_withdraw_request> Function()>>(
          'frbgen_breez_sdk_cst_new_box_autoadd_ln_url_withdraw_request');
  late final _frbgen_breez_sdk_cst_new_box_autoadd_ln_url_withdraw_request =
      _frbgen_breez_sdk_cst_new_box_autoadd_ln_url_withdraw_requestPtr
          .asFunction<ffi.Pointer<wire_cst_ln_url_withdraw_request> Function()>();

  ffi.Pointer<wire_cst_ln_url_withdraw_request_data>
      frbgen_breez_sdk_cst_new_box_autoadd_ln_url_withdraw_request_data() {
    return _frbgen_breez_sdk_cst_new_box_autoadd_ln_url_withdraw_request_data();
  }

  late final _frbgen_breez_sdk_cst_new_box_autoadd_ln_url_withdraw_request_dataPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_ln_url_withdraw_request_data> Function()>>(
          'frbgen_breez_sdk_cst_new_box_autoadd_ln_url_withdraw_request_data');
  late final _frbgen_breez_sdk_cst_new_box_autoadd_ln_url_withdraw_request_data =
      _frbgen_breez_sdk_cst_new_box_autoadd_ln_url_withdraw_request_dataPtr
          .asFunction<ffi.Pointer<wire_cst_ln_url_withdraw_request_data> Function()>();

  ffi.Pointer<wire_cst_ln_url_withdraw_success_data>
      frbgen_breez_sdk_cst_new_box_autoadd_ln_url_withdraw_success_data() {
    return _frbgen_breez_sdk_cst_new_box_autoadd_ln_url_withdraw_success_data();
  }

  late final _frbgen_breez_sdk_cst_new_box_autoadd_ln_url_withdraw_success_dataPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_ln_url_withdraw_success_data> Function()>>(
          'frbgen_breez_sdk_cst_new_box_autoadd_ln_url_withdraw_success_data');
  late final _frbgen_breez_sdk_cst_new_box_autoadd_ln_url_withdraw_success_data =
      _frbgen_breez_sdk_cst_new_box_autoadd_ln_url_withdraw_success_dataPtr
          .asFunction<ffi.Pointer<wire_cst_ln_url_withdraw_success_data> Function()>();

  ffi.Pointer<wire_cst_lsp_information> frbgen_breez_sdk_cst_new_box_autoadd_lsp_information() {
    return _frbgen_breez_sdk_cst_new_box_autoadd_lsp_information();
  }

  late final _frbgen_breez_sdk_cst_new_box_autoadd_lsp_informationPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_lsp_information> Function()>>(
          'frbgen_breez_sdk_cst_new_box_autoadd_lsp_information');
  late final _frbgen_breez_sdk_cst_new_box_autoadd_lsp_information =
      _frbgen_breez_sdk_cst_new_box_autoadd_lsp_informationPtr
          .asFunction<ffi.Pointer<wire_cst_lsp_information> Function()>();

  ffi.Pointer<wire_cst_message_success_action_data>
      frbgen_breez_sdk_cst_new_box_autoadd_message_success_action_data() {
    return _frbgen_breez_sdk_cst_new_box_autoadd_message_success_action_data();
  }

  late final _frbgen_breez_sdk_cst_new_box_autoadd_message_success_action_dataPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_message_success_action_data> Function()>>(
          'frbgen_breez_sdk_cst_new_box_autoadd_message_success_action_data');
  late final _frbgen_breez_sdk_cst_new_box_autoadd_message_success_action_data =
      _frbgen_breez_sdk_cst_new_box_autoadd_message_success_action_dataPtr
          .asFunction<ffi.Pointer<wire_cst_message_success_action_data> Function()>();

  ffi.Pointer<wire_cst_node_config> frbgen_breez_sdk_cst_new_box_autoadd_node_config() {
    return _frbgen_breez_sdk_cst_new_box_autoadd_node_config();
  }

  late final _frbgen_breez_sdk_cst_new_box_autoadd_node_configPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_node_config> Function()>>(
          'frbgen_breez_sdk_cst_new_box_autoadd_node_config');
  late final _frbgen_breez_sdk_cst_new_box_autoadd_node_config =
      _frbgen_breez_sdk_cst_new_box_autoadd_node_configPtr
          .asFunction<ffi.Pointer<wire_cst_node_config> Function()>();

  ffi.Pointer<wire_cst_node_credentials> frbgen_breez_sdk_cst_new_box_autoadd_node_credentials() {
    return _frbgen_breez_sdk_cst_new_box_autoadd_node_credentials();
  }

  late final _frbgen_breez_sdk_cst_new_box_autoadd_node_credentialsPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_node_credentials> Function()>>(
          'frbgen_breez_sdk_cst_new_box_autoadd_node_credentials');
  late final _frbgen_breez_sdk_cst_new_box_autoadd_node_credentials =
      _frbgen_breez_sdk_cst_new_box_autoadd_node_credentialsPtr
          .asFunction<ffi.Pointer<wire_cst_node_credentials> Function()>();

  ffi.Pointer<wire_cst_open_channel_fee_request>
      frbgen_breez_sdk_cst_new_box_autoadd_open_channel_fee_request() {
    return _frbgen_breez_sdk_cst_new_box_autoadd_open_channel_fee_request();
  }

  late final _frbgen_breez_sdk_cst_new_box_autoadd_open_channel_fee_requestPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_open_channel_fee_request> Function()>>(
          'frbgen_breez_sdk_cst_new_box_autoadd_open_channel_fee_request');
  late final _frbgen_breez_sdk_cst_new_box_autoadd_open_channel_fee_request =
      _frbgen_breez_sdk_cst_new_box_autoadd_open_channel_fee_requestPtr
          .asFunction<ffi.Pointer<wire_cst_open_channel_fee_request> Function()>();

  ffi.Pointer<wire_cst_opening_fee_params> frbgen_breez_sdk_cst_new_box_autoadd_opening_fee_params() {
    return _frbgen_breez_sdk_cst_new_box_autoadd_opening_fee_params();
  }

  late final _frbgen_breez_sdk_cst_new_box_autoadd_opening_fee_paramsPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_opening_fee_params> Function()>>(
          'frbgen_breez_sdk_cst_new_box_autoadd_opening_fee_params');
  late final _frbgen_breez_sdk_cst_new_box_autoadd_opening_fee_params =
      _frbgen_breez_sdk_cst_new_box_autoadd_opening_fee_paramsPtr
          .asFunction<ffi.Pointer<wire_cst_opening_fee_params> Function()>();

  ffi.Pointer<wire_cst_pay_onchain_request> frbgen_breez_sdk_cst_new_box_autoadd_pay_onchain_request() {
    return _frbgen_breez_sdk_cst_new_box_autoadd_pay_onchain_request();
  }

  late final _frbgen_breez_sdk_cst_new_box_autoadd_pay_onchain_requestPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_pay_onchain_request> Function()>>(
          'frbgen_breez_sdk_cst_new_box_autoadd_pay_onchain_request');
  late final _frbgen_breez_sdk_cst_new_box_autoadd_pay_onchain_request =
      _frbgen_breez_sdk_cst_new_box_autoadd_pay_onchain_requestPtr
          .asFunction<ffi.Pointer<wire_cst_pay_onchain_request> Function()>();

  ffi.Pointer<wire_cst_payment> frbgen_breez_sdk_cst_new_box_autoadd_payment() {
    return _frbgen_breez_sdk_cst_new_box_autoadd_payment();
  }

  late final _frbgen_breez_sdk_cst_new_box_autoadd_paymentPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_payment> Function()>>(
          'frbgen_breez_sdk_cst_new_box_autoadd_payment');
  late final _frbgen_breez_sdk_cst_new_box_autoadd_payment =
      _frbgen_breez_sdk_cst_new_box_autoadd_paymentPtr.asFunction<ffi.Pointer<wire_cst_payment> Function()>();

  ffi.Pointer<wire_cst_payment_failed_data> frbgen_breez_sdk_cst_new_box_autoadd_payment_failed_data() {
    return _frbgen_breez_sdk_cst_new_box_autoadd_payment_failed_data();
  }

  late final _frbgen_breez_sdk_cst_new_box_autoadd_payment_failed_dataPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_payment_failed_data> Function()>>(
          'frbgen_breez_sdk_cst_new_box_autoadd_payment_failed_data');
  late final _frbgen_breez_sdk_cst_new_box_autoadd_payment_failed_data =
      _frbgen_breez_sdk_cst_new_box_autoadd_payment_failed_dataPtr
          .asFunction<ffi.Pointer<wire_cst_payment_failed_data> Function()>();

  ffi.Pointer<wire_cst_prepare_onchain_payment_request>
      frbgen_breez_sdk_cst_new_box_autoadd_prepare_onchain_payment_request() {
    return _frbgen_breez_sdk_cst_new_box_autoadd_prepare_onchain_payment_request();
  }

  late final _frbgen_breez_sdk_cst_new_box_autoadd_prepare_onchain_payment_requestPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_prepare_onchain_payment_request> Function()>>(
          'frbgen_breez_sdk_cst_new_box_autoadd_prepare_onchain_payment_request');
  late final _frbgen_breez_sdk_cst_new_box_autoadd_prepare_onchain_payment_request =
      _frbgen_breez_sdk_cst_new_box_autoadd_prepare_onchain_payment_requestPtr
          .asFunction<ffi.Pointer<wire_cst_prepare_onchain_payment_request> Function()>();

  ffi.Pointer<wire_cst_prepare_redeem_onchain_funds_request>
      frbgen_breez_sdk_cst_new_box_autoadd_prepare_redeem_onchain_funds_request() {
    return _frbgen_breez_sdk_cst_new_box_autoadd_prepare_redeem_onchain_funds_request();
  }

  late final _frbgen_breez_sdk_cst_new_box_autoadd_prepare_redeem_onchain_funds_requestPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_prepare_redeem_onchain_funds_request> Function()>>(
          'frbgen_breez_sdk_cst_new_box_autoadd_prepare_redeem_onchain_funds_request');
  late final _frbgen_breez_sdk_cst_new_box_autoadd_prepare_redeem_onchain_funds_request =
      _frbgen_breez_sdk_cst_new_box_autoadd_prepare_redeem_onchain_funds_requestPtr
          .asFunction<ffi.Pointer<wire_cst_prepare_redeem_onchain_funds_request> Function()>();

  ffi.Pointer<wire_cst_prepare_refund_request> frbgen_breez_sdk_cst_new_box_autoadd_prepare_refund_request() {
    return _frbgen_breez_sdk_cst_new_box_autoadd_prepare_refund_request();
  }
